--- a/cart.html
+++ b/cart.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hai</h1>
+    <div>
+        <input type="text" value="name" placeholder="name">
+    </div>
 </body>
 </html>
